--- a/main.html
+++ b/main.html
@@ -6,12 +6,12 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js"></script>
 <script src="js/autoresize.jquery.min.js"></script>
 <script language="javascript">
-	function myfunction(){
-		var text = document.myform.codeBox.value;
+	function respondToInput(){
+		var text = document.mainForm.codeBox.value;
 		if(text == 'hello'){
-			document.myform.codeBox.value = 'howdy!';	
+			document.mainForm.codeBox.value = 'howdy!';	
 		} else{
-			document.myform.codeBox.value = 'way to say hello...';	
+			document.mainForm.codeBox.value = 'way to say hello...';	
 		}
 	}
 </script>
@@ -30,10 +30,13 @@
 
 </head>
 <body>
-	<form name='myform'>
-	<textarea name="codeBox" id="codeBox" cols="40" rows="1" type="text"></textarea>
 	</br>
-		<input type="button" onclick="myfunction()" value="Analyze">
+	<center>
+	<form name='mainForm'>
+	<textarea name="codeBox" id="codeBox" cols="40" rows="3" type="text"></textarea>
+	</br>
+		<input type="button" onclick="respondToInput()" value="Analyze">
 	</form>
+	</center>
 </body>
 </html>
